--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,3 +1,4 @@
+@import "./vendor/normalize.scss";
 @import "./global/variables.scss";
 @import "./global/reboot.scss";
 @import "./global/fonts.scss";
@@ -18,3 +19,4 @@
 @import "./blocks/form.scss";
 @import "./blocks/catalog.scss";
 @import "./blocks/manufacturing.scss";
+@import "./blocks/zig-zag.scss";
