--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -15,6 +15,69 @@
   text-decoration: none;
 
   background-color: $color-default-white;
+  border: none;
   outline: 2px solid $color-charcoal;
   cursor: pointer;
+
+  &:hover {
+    color: $color-default-white;
+
+    background: $color-charcoal;
+  }
+
+  &:focus {
+    color: $color-default-white;
+
+    background: $color-charcoal;
+  }
+
+  &:active {
+    color: rgba($color-default-white, 0.3);
+
+    background: $color-charcoal;
+  }
+
+  &--secondary {
+    padding: 18px;
+
+    font-size: 17px;
+    line-height: 16px;
+    color: $color-default-white;
+
+    background-color: $color-downy;
+    outline: none;
+
+    &:hover {
+      background-color: $color-downy;
+      opacity: 0.8;
+    }
+
+    &:focus {
+      background-color: $color-downy;
+      outline: auto;
+      opacity: 0.7;
+    }
+
+    &:active {
+      background-color: $color-downy;
+      opacity: 0.6;
+    }
+  }
+
+  &--modal {
+    &:hover {
+      color: $color-charcoal;
+
+      background-color: transparent;
+      outline-color: rgba($color-charcoal, 0.3);
+    }
+
+    &:active {
+      outline-color: $color-downy-mod;
+    }
+  }
+
+  @media (min-width: $vp-768) {
+    font-size: 17px;
+  }
 }
