--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -4,11 +4,11 @@
 
   list-style: none;
 
-  @media (min-width: $tablet-width) {
+  @media (min-width: $vp-768) {
     padding: 67px 50px 0 50px;
   }
 
-  @media (min-width: $desktop-width) {
+  @media (min-width: $vp-1150) {
     display: grid;
     max-width: 1150px;
     padding: 0 50px;
@@ -23,7 +23,15 @@
   max-width: 260px;
   margin: 0 auto;
 
-  @media (min-width: $tablet-width) {
+  &:hover {
+    box-shadow: 0 6px 10px rgba($color-default-black, 0.1);
+  }
+
+  &:active {
+    box-shadow: 0 3px 5px rgba($color-default-black, 0.1);
+  }
+
+  @media (min-width: $vp-768) {
     display: grid;
     max-width: 668px;
     margin-bottom: 54px;
@@ -31,7 +39,7 @@
     grid-template-columns: 1fr 1fr;
   }
 
-  @media (min-width: $desktop-width) {
+  @media (min-width: $vp-1150) {
     display: flex;
     flex-direction: column;
     max-width: 1051px;
@@ -44,7 +52,7 @@
   width: 100%;
   height: auto;
 
-  @media (min-width: $tablet-width) {
+  @media (min-width: $vp-768) {
     height: 100%;
 
     object-fit: cover;
@@ -58,13 +66,13 @@
 
   border: 1px solid $color-whisper;
 
-  @media (min-width: $tablet-width) {
+  @media (min-width: $vp-768) {
     width: 100%;
     min-width: 334px;
     margin-bottom: 0;
   }
 
-  @media (min-width: $desktop-width) {
+  @media (min-width: $vp-1150) {
     width: 100%;
     min-width: 316px;
   }
@@ -75,11 +83,11 @@
 
   border-bottom: 1px solid $color-whisper;
 
-  @media (min-width: $tablet-width) {
+  @media (min-width: $vp-768) {
     padding-bottom: 170px;
   }
 
-  @media (min-width: $desktop-width) {
+  @media (min-width: $vp-1150) {
     padding-bottom: 37px;
     &--big {
       padding-bottom: 12px;
@@ -88,6 +96,8 @@
 }
 
 .catalog-item__footer {
+  position: relative;
+
   padding-top: 22px;
   padding-bottom: 32px;
 }
@@ -95,6 +105,14 @@
 .catalog-item__link {
   color: $color-default-black;
   text-decoration: none;
+
+  &:hover {
+    opacity: 0.6;
+  }
+
+  &:active {
+    opacity: 0.3;
+  }
 }
 
 .catalog-item__title {
@@ -106,7 +124,7 @@
   font-size: 17px;
   line-height: 24px;
 
-  @media (min-width: $tablet-width) {
+  @media (min-width: $vp-768) {
     font-size: 20px;
   }
 }
@@ -121,7 +139,7 @@
   line-height: 30px;
   color: $color-charcoal;
 
-  @media (min-width: $tablet-width) {
+  @media (min-width: $vp-768) {
     font-size: 15px;
   }
 }
@@ -133,7 +151,31 @@
   line-height: 24px;
   color: $color-default-black;
 
-  @media (min-width: $tablet-width) {
+  @media (min-width: $vp-768) {
     font-size: 17px;
+  }
+}
+
+.catalog-item__button {
+  position: absolute;
+  left: 90%;
+
+  background-color: inherit;
+  border: none;
+
+  &:hover svg {
+    opacity: 1;
+
+    fill: $color-downy;
+  }
+
+  &:focus svg {
+    opacity: 1;
+
+    fill: $color-downy;
+  }
+
+  &:active svg {
+    opacity: 0.3;
   }
 }
