--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -1,5 +1,5 @@
 .contacts {
-  @media (min-width: $desktop-width) {
+  @media (min-width: $vp-1150) {
     position: relative;
 
     max-width: 1150px;
@@ -16,14 +16,14 @@
   font-size: 25px;
   line-height: 30px;
 
-  @media (min-width: $tablet-width) {
-    margin: 150px 0 49px 0;
+  @media (min-width: $vp-768) {
+    margin-bottom: 49px;
 
     font-size: 43px;
     line-height: 50px;
   }
 
-  @media (min-width: $desktop-width) {
+  @media (min-width: $vp-1150) {
     font-size: 53px;
     line-height: 57px;
   }
@@ -40,7 +40,7 @@
   font-size: 14px;
   line-height: 30px;
 
-  @media (min-width: $tablet-width) {
+  @media (min-width: $vp-768) {
     font-size: 17px;
   }
 }
@@ -48,13 +48,19 @@
 .contacts__email,
 .contacts__address {
   margin-right: 35px;
+
+  @media (min-width: $vp-768) {
+    margin-right: 24px;
+  }
 }
 
 .contacts__container {
   display: flex;
+
   &--email {
     margin-bottom: 50px;
   }
+
   &--address {
     margin-bottom: 62px;
   }
@@ -65,6 +71,18 @@
   text-decoration: none;
 
   border-bottom: 1px solid $color-downy-mod;
+
+  &:hover {
+    color: $color-puerto-rico-mod;
+  }
+
+  &:active {
+    border-color: rgba($color-downy-mod, 0.1);
+  }
+
+  @media (min-width: $vp-768) {
+    height: 30px;
+  }
 }
 
 .contacts__map-wrapper {
@@ -72,7 +90,7 @@
   margin: 0 auto;
   margin-bottom: 42px;
 
-  @media (min-width: $desktop-width) {
+  @media (min-width: $vp-1150) {
     position: absolute;
     top: -50px;
     right: 100px;
@@ -83,25 +101,25 @@
   margin: 0 auto;
   margin-bottom: 55px;
 
-  @media (min-width: $tablet-width) {
+  @media (min-width: $vp-768) {
     font-size: 17px;
   }
 
-  @media (min-width: $desktop-width) {
+  @media (min-width: $vp-1150) {
     margin: 0;
-    margin-left: 350px;
+    margin-left: 225px;
   }
 }
 
 .contacts__wrapper {
-  @media (min-width: $tablet-width) {
+  @media (min-width: $vp-768) {
     display: grid;
-    grid-template-columns: 1fr 1fr;
 
     gap: 25px;
+    grid-template-columns: 1fr 1fr;
   }
 
-  @media (min-width: $desktop-width) {
+  @media (min-width: $vp-1150) {
     display: flex;
     flex-direction: column;
     max-width: 300px;
@@ -109,17 +127,46 @@
 }
 
 .contacts__inner {
-  @media (min-width: $mobile-width) {
+  padding: 0 30px;
+
+  @media (min-width: $vp-321) {
     max-width: 600px;
     margin: 0 auto;
   }
 
-  @media (min-width: $tablet-width) {
+  @media (min-width: $vp-768) {
+    position: relative;
+
     max-width: 990px;
     margin: 0 auto;
+
+    &::after {
+      content: "";
+      position: absolute;
+      top: 0;
+      right: 50px;
+
+      width: 47px;
+      height: 81px;
+
+      background-image: url("../img/flag.svg");
+    }
   }
 
-  @media (min-width: $desktop-width) {
-    padding: 0 50px 0 175px;
+  @media (min-width: $vp-1150) {
+    padding: 0 50px 0 125px;
+
+
+    &::after {
+      content: "";
+      position: absolute;
+      top: 10px;
+      left: 33px;
+
+      width: 47px;
+      height: 81px;
+
+      background-image: url("../img/flag.svg");
+    }
   }
 }
