--- a/source/sass/blocks/container.scss
+++ b/source/sass/blocks/container.scss
@@ -1,8 +1,5 @@
 .container {
   width: 100%;
-  padding: 0 30px;
-
-  @media (min-width: $tablet-width) {
-    padding: 0 50px;
-  }
+  max-width: 1150px;
+  margin: 0 auto;
 }
