--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -1,5 +1,5 @@
 .form {
-  @media (min-width: $tablet-width) {
+  @media (min-width: $vp-768) {
     position: relative;
   }
 }
@@ -10,12 +10,14 @@
 
   border: none;
 
-  @media (min-width: $tablet-width) {
-    margin-bottom: 100px;
+  @media (min-width: $vp-768) {
+    margin-bottom: 70px;
   }
 }
 
 .form-group__title {
+  position: relative;
+
   width: 90px;
 
   font-style: normal;
@@ -25,17 +27,36 @@
   color: $color-downy;
   text-transform: uppercase;
 
-  @media (min-width: $tablet-width) {
+  &::before {
+    content: "";
+    position: absolute;
+    top: 8px;
+    left: 62px;
+
+    width: 198px;
+    height: 1px;
+
+    background-color: $color-downy-mod;
+
+    @media (min-width: $vp-768) {
+      display: none;
+    }
+  }
+
+
+  @media (min-width: $vp-768) {
     float: left;
     margin-right: 80px;
   }
 
-  @media (min-width: $desktop-width) {
+  @media (min-width: $vp-1150) {
     margin-right: 50px;
   }
 }
 
 .form-group__label {
+  position: relative;
+
   padding-right: 25px;
 
   font-style: normal;
@@ -43,7 +64,7 @@
   font-size: 17px;
   line-height: 18px;
 
-  @media (min-width: $tablet-width) {
+  @media (min-width: $vp-768) {
     margin: 0;
     padding: 0;
 
@@ -52,26 +73,18 @@
   }
 
   &--checkbox {
-    padding-left: 48px;
+    padding-left: 60px;
 
-    @media (min-width: $tablet-width) {
-      padding-left: 144px;
-    }
-
-    @media (min-width: $desktop-width) {
+    @media (min-width: $vp-768) {
       padding-left: 70px;
     }
   }
 
   &--radio {
     display: flex;
-    padding: 14px 20px 10px 48px;
+    padding: 14px 20px 10px 60px;
 
-    @media (min-width: $tablet-width) {
-      padding-left: 144px;
-    }
-
-    @media (min-width: $desktop-width) {
+    @media (min-width: $vp-768) {
       padding-left: 70px;
     }
   }
@@ -79,23 +92,25 @@
 
 .form__list {
   margin: 0;
+  margin-bottom: 43px;
   padding: 0;
 
   list-style: none;
 
-  @media (min-width: $tablet-width) {
+  @media (min-width: $vp-768) {
     display: grid;
+    margin-bottom: 0;
   }
 }
 
 .form__list--has-wrapper {
-  @media (min-width: $tablet-width) {
+  @media (min-width: $vp-768) {
     display: grid;
 
     grid-template-columns: 1fr 1fr;
   }
 
-  @media (min-width: $desktop-width) {
+  @media (min-width: $vp-1150) {
     grid-template-columns: 1fr 1fr 1fr;
   }
 }
@@ -119,9 +134,144 @@
     margin-bottom: 43px;
   }
 
-  @media (min-width: $tablet-width) {
+  &--about,
+  &--contacts {
+    width: 100%;
+    padding: 15px 0;
+
+    border-bottom: 2px solid $color-default-black;
+
+    &::placeholder {
+      font-size: 17px;
+      line-height: 18px;
+      color: $color-default-black;
+
+      opacity: 0.3;
+    }
+
+    &:hover {
+      border-color: $color-downy-mod;
+    }
+
+    &:hover ~ svg {
+      opacity: 1;
+
+      fill: $color-downy-mod;
+    }
+
+    &:focus {
+      border-color: $color-downy-mod;
+      outline: none;
+    }
+
+    &:focus ~ svg {
+      opacity: 1;
+
+      fill: $color-downy-mod;
+    }
+
+    &:active {
+      border-color: $color-downy-mod;
+    }
+
+    &:active ~ svg {
+      opacity: 1;
+
+      fill: $color-downy-mod;
+    }
+
+    @media (min-width: $vp-768) {
+      padding-left: 15px;
+    }
+  }
+
+  @media (min-width: $vp-768) {
     font-size: 18px;
     line-height: 19px;
+  }
+}
+
+.form-group__input[type="radio"]:checked + .form-group__mark--radio::after {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+
+  width: 18px;
+  height: 18px;
+
+  background-color: $color-downy-mod;
+  border-radius: 50%;
+  transform: translateX(-50%) translateY(-50%);
+
+  @media (min-width: $vp-768) {
+    width: 22px;
+    height: 22px;
+  }
+}
+
+.form-group__mark {
+  position: absolute;
+  top: 45%;
+  left: 0;
+
+  border: 2px solid $color-default-black;
+  transform: translateY(-50%);
+
+  &--radio {
+    width: 40px;
+    height: 40px;
+
+    border-radius: 50%;
+  }
+
+  &--checkbox {
+    width: 38px;
+    height: 38px;
+  }
+
+  &:hover {
+    border-color: $color-downy-mod;
+  }
+
+  &:active {
+    border-color: rgba($color-charcoal, 0.3);
+  }
+
+  @media (min-width: $vp-768) {
+    &--radio {
+      left: 3px;
+
+      width: 48px;
+      height: 48px;
+    }
+
+    &--checkbox {
+      left: -1px;
+
+      width: 52px;
+      height: 52px;
+    }
+  }
+}
+
+.form-group__input[type="checkbox"]:checked + .form-group__mark--checkbox::after {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+
+  width: 24px;
+  height: 17px;
+
+  background-image: url("../img/tick.svg");
+  transform: translateX(-50%) translateY(-50%);
+
+  @media (min-width: $vp-768) {
+    width: 32px;
+    height: 22px;
+
+    background-image: url("../img/tablet-tick.svg");
   }
 }
 
@@ -146,40 +296,47 @@
 }
 
 .form-group__textarea {
-  min-width: 260px;
-  max-width: 260px;
-  margin-bottom: 17px;
-  padding: 15px 15px 26px;
-
-  font-style: normal;
-  font-weight: 400;
-  font-size: 17px;
-  line-height: 18px;
-  font-family: inherit;
-
-  border: 2px solid  $color-charcoal;
-
-  @media (min-width: $tablet-width) {
-    max-width: 501px;
-
-    font-size: 18px;
-    line-height: 19px;
-  }
-
-  @media (min-width: $desktop-width) {
-    max-width: 700px;
-  }
-}
-
-.form-group__input--about {
   width: 100%;
-  padding: 15px 0;
+  min-height: 142px;
+  padding: 17px;
 
-  border-bottom: 2px solid $color-default-black;
-  opacity: 0.3;
+  font-size: 19px;
+  line-height: 18px;
+  color: $color-charcoal;
 
-  @media (min-width: $tablet-width) {
-    padding-left: 15px;
+  border: 2px solid $color-charcoal;
+
+  resize: none;
+
+  &::placeholder {
+    font-size: 17px;
+    line-height: 18px;
+    color: $color-default-black;
+
+    opacity: 0.3;
+  }
+
+  &:hover {
+    border-color: $color-downy-mod;
+  }
+
+  &:focus {
+    border-color: $color-downy-mod;
+    outline: none;
+  }
+
+  &:active {
+    border-color: $color-downy-mod;
+  }
+
+  @media (min-width: $vp-768) {
+    &::placeholder {
+      font-size: 19px;
+    }
+  }
+
+  @media (min-width: $vp-1150) {
+    max-width: 700px;
   }
 }
 
@@ -193,7 +350,7 @@
   line-height: 16px;
   color: $color-charcoal;
 
-  @media (min-width: $tablet-width) {
+  @media (min-width: $vp-768) {
     order: 2;
 
     font-size: 17px;
@@ -209,38 +366,49 @@
   font-size: 17px;
   line-height: 16px;
 
-  @media (min-width: $tablet-width) {
+  @media (min-width: $vp-768) {
     max-width: 230px;
   }
 }
 
 .form__list--about {
-  @media (min-width: $tablet-width) {
+  @media (min-width: $vp-768) {
     display: grid;
+  }
+}
+
+.form__item {
+  @media (min-width: $vp-768) {
+    margin-bottom: 50px;
+    &:last-child {
+      margin-bottom: 0;
+    }
   }
 }
 
 .form__item--about {
   margin-bottom: 22px;
 
-  @media (min-width: $tablet-width) {
+  @media (min-width: $vp-768) {
     display: flex;
     align-items: center;
     max-width: 501px;
     margin-bottom: 41px;
+    &:last-child {
+      margin-bottom: 0;
+    }
   }
 
-  @media (min-width: $desktop-width) {
+  @media (min-width: $vp-1150) {
     max-width: 700px;
   }
 }
 
-.form__item--checkbox,
-.form__item--about {
-  margin-bottom: 23px;
+.form__item--checkbox {
+  margin-bottom: 43px;
 
-  @media (min-width: $tablet-width) {
-    margin-bottom: 60px;
+  @media (min-width: $vp-768) {
+    margin-bottom: 55px;
 
     &:last-child {
       margin-bottom: 0;
@@ -248,8 +416,9 @@
   }
 }
 
+
 .form-group--contacts {
-  @media (min-width: $tablet-width) {
+  @media (min-width: $vp-768) {
     display: grid;
   }
 }
@@ -258,26 +427,23 @@
   width: 100%;
   padding: 15px 0;
 
-  border-bottom: 2px solid $color-default-black;
-  opacity: 0.3;
-
-  @media (min-width: $tablet-width) {
+  @media (min-width: $vp-768) {
     max-width: 501px;
 
     background-color: $color-white-smoke;
   }
 
-  @media (min-width: $tablet-width) {
+  @media (min-width: $vp-1150) {
     max-width: 700px;
   }
 }
 
 .form-group--grey {
-  @media (min-width: $tablet-width) {
+  @media (min-width: $vp-768) {
     padding-top: 65px;
   }
 
-  @media (min-width: $desktop-width) {
+  @media (min-width: $vp-1150) {
     padding-top: 50px;
   }
 }
@@ -286,7 +452,7 @@
   margin-bottom: 22px;
 
 
-  @media (min-width: $tablet-width) {
+  @media (min-width: $vp-768) {
     display: grid;
     align-items: center;
     margin-bottom: 0;
@@ -302,14 +468,14 @@
 }
 
 .form-group--more {
-  @media (min-width: $tablet-width) {
+  @media (min-width: $vp-768) {
     display: flex;
     margin-bottom: 53px;
   }
 }
 
 .form-group__label-more {
-  @media (min-width: $tablet-width) {
+  @media (min-width: $vp-768) {
     display: grid;
     width: 100%;
   }
@@ -320,20 +486,22 @@
   margin: 0 auto;
   padding: 0 30px;
 
-  @media (min-width: $tablet-width) {
+  @media (min-width: $vp-768) {
     display: flex;
     align-items: baseline;
     max-width: 768px;
     padding: 0 50px;
 
-    column-gap: 110px;
+    column-gap: 135px;
   }
 
-  @media (min-width: $desktop-width) {
+  @media (min-width: $vp-1150) {
     display: flex;
     align-items: baseline;
     max-width: 710px;
     padding: 0 5px;
+
+    column-gap: 165px;
   }
 }
 
@@ -343,23 +511,43 @@
   margin: 0 auto;
   padding: 0 30px;
 
-  @media (min-width: $mobile-width) {
+  &--last {
+    margin-bottom: 17px;
+  }
+
+  @media (min-width: $vp-321) {
     max-width: 320px;
   }
 
-  @media (min-width: $tablet-width) {
+  @media (min-width: $vp-768) {
     max-width: 768px;
     padding: 0 50px;
   }
 
-  @media (min-width: $desktop-width) {
+  @media (min-width: $vp-1150) {
     max-width: 1150px;
     padding: 0 97px;
   }
 }
 
 .form__container--color {
-  @media (min-width: $tablet-width) {
+  @media (min-width: $vp-768) {
     background-color: $color-white-smoke;
+  }
+}
+
+
+.form-group__contact {
+  position: absolute;
+  top: 0;
+  left: 215px;
+
+  @media (min-width: $vp-768) {
+    top: 15px;
+    left: 93%;
+  }
+
+  @media (min-width: $vp-1150) {
+    left: 80%;
   }
 }
