--- a/source/sass/blocks/knitting.scss
+++ b/source/sass/blocks/knitting.scss
@@ -3,34 +3,33 @@
 }
 
 .knitting__description {
+  margin: 0 auto;
+  margin-bottom: 35px;
+  padding: 0 30px;
+
   font-style: normal;
   font-weight: 400;
   font-size: 13px;
   line-height: 24px;
   color: $color-charcoal;
-  margin: 0 auto;
-  margin-bottom: 35px;
-  padding: 0 30px;
 
-  @media (min-width: $mobile-width) {
+  @media (min-width: $vp-321) {
     max-width: 500px;
-    padding: 0 30px;
     margin-bottom: 80px;
+    padding: 0 30px;
   }
 
-  @media (min-width: $tablet-width) {
-    font-size: 17px;
-    line-height: 30px;
+  @media (min-width: $vp-768) {
     max-width: 668px;
     padding: 0 50px;
+
+    font-size: 17px;
+    line-height: 30px;
   }
 
-  @media (min-width: $desktop-width) {
+  @media (min-width: $vp-1150) {
     max-width: 735px;
-    padding: 0 15px;
     margin-bottom: 80px;
-
+    padding: 0 15px;
   }
 }
-
-
