--- a/source/sass/blocks/modal.scss
+++ b/source/sass/blocks/modal.scss
@@ -1,74 +1,125 @@
-.modal {
-  position: fixed;
-  top: 50%;
-  left: 50%;
+.modal-container {
+  display: none;
 
-  min-width: 320px;
-  max-width: 320px;
-  margin: 0 auto;
-  padding: 30px;
+  &--open {
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 3;
 
-  background-color: $color-default-white;
-  border: 1px solid $color-silver;
-  box-shadow: 0 5px 10px $solor-dark-green;
-  transform: translate(-50%,-50%);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
 
-  @media (min-width: $tablet-width) {
-    max-width: 566px;
-    padding: 108px;
+    background-color: rgba($color-default-white, 0.9);
   }
 }
 
-.modal__close {
-  display: none;
+
+.modal-window {
+  padding: 30px 30px 46px;
+
+  background-color: $color-default-white;
+  outline: 1px solid $color-silver;
+  box-shadow: 0 5px 10px rgba(0, 1, 1, 0.25);
+
+  @media (min-width: $vp-768) {
+    width: 566px;
+    padding: 38px 106px 46px;
+  }
 }
 
-.modal__title {
-  text-align: center;
-  margin: 0 0 14px 0;
+.modal-window__title {
+  margin: 0 0 14px;
 
-  font-style: normal;
   font-weight: 700;
   font-size: 25px;
   line-height: 30px;
+  text-align: center;
   text-transform: uppercase;
 
-  @media (min-width: $tablet-width) {
-    padding: 0;
+  @media (min-width: $vp-768) {
+    margin-bottom: 11px;
+
+    font-size: 30px;
+    line-height: 57px;
   }
 }
 
-.modal__form-group {
-  border: none;
-}
+.modal-window__text {
+  display: block;
+  margin-bottom: 22px;
 
-.modal__legend {
-  font-style: normal;
-  font-weight: 400;
   font-size: 15px;
   line-height: 30px;
+  text-align: center;
   color: $color-charcoal;
+
+  @media (min-width: $vp-768) {
+    margin-bottom: 20px;
+
+    font-size: 17px;
+  }
 }
 
-.modal__list {
-  margin: 0;
+.modal-window__list {
+  display: grid;
+  max-width: 350px;
+  margin: 0 auto;
+  margin-bottom: 31px;
   padding: 0;
 
   list-style: none;
+
+  gap: 7px;
+  grid-template-columns: repeat(3, 1fr);
 }
 
-.modal__submit {
-  width: 100%;
-  margin: 0 auto;
-  margin-bottom: 46px;
+.modal-window__control {
+  font-weight: 700;
+  font-size: 17px;
+  line-height: 16px;
+}
 
-  color: $color-default-white;
+.modal-window__control-input {
+  position: absolute;
 
-  background-color: $color-downy;
-  border: none;
-  outline: none;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  padding: 0;
+  overflow: hidden;
 
-  @media (min-width: $tablet-width) {
-    max-width: 350px;
+  white-space: nowrap;
+
+  border: 0;
+
+  clip: rect(0 0 0 0);
+  clip-path: inset(100%);
+}
+
+.modal-window__control-mark {
+  display: block;
+  max-width: 82px;
+  padding: 18px 0;
+
+  font-size: 17px;
+  line-height: 16px;
+
+  background-color: transparent;
+  outline-color: rgba($color-charcoal, 0.1);
+
+  @media (min-width: $vp-768) {
+    max-width: 112px;
   }
+}
+
+.modal-window__control-input:checked + .modal-window__control-mark {
+  outline-color: $color-downy-mod;
+}
+
+.modal-window__button {
+  width: 100%;
 }
