--- a/source/sass/blocks/stock.scss
+++ b/source/sass/blocks/stock.scss
@@ -1,195 +1,225 @@
 .stock {
-  margin: 0 auto;
-  padding: 0 30px;
+  margin-bottom: 31px;
+  padding: 0 30px 36px;
 
-  background-color: $color-default-white;
-
-  @media (min-width: $tablet-width) {
-    position: relative;
-
-    max-width: 800px;
-    margin: 0 auto;
-    padding: 0 50px;
+  @media (min-width: $vp-768) {
+    padding: 40px 50px 69px;
   }
 
-  @media (min-width: $tablet-width) {
-    max-width: 1050px;
-    padding: 0 50px;
+  @media (min-width: $vp-1150) {
+    margin: 0 auto;
+    padding: 54px 50px 96px 175px;
+  }
+}
+
+.stock__container {
+  max-width: 400px;
+  margin: 0 auto;
+
+  @media (min-width: $vp-768) {
+    max-width: none;
+  }
+
+  @media (min-width: $vp-1150) {
+    max-width: 875px;
+  }
+}
+
+.stock__wrapper {
+  position: relative;
+  @media (min-width: $vp-768) {
+    display: grid;
+
+    column-gap: 42px;
+
+    grid-template-columns: 43.71% auto;
+    grid-template-rows: repeat(4, auto);
+  }
+
+  @media (min-width: $vp-1150) {
+    column-gap: 58px;
+
+    grid-template-columns: 33.37% auto;
   }
 }
 
 .stock__title {
-  margin: 0;
+  margin: 0 0 4px 0;
 
-  font-style: normal;
   font-weight: 700;
   font-size: 25px;
   line-height: 30px;
 
-  @media (min-width: $tablet-width) {
-    margin-right: 130px;
+  @media (min-width: $vp-768) {
+    margin: 0 0 38px 0;
 
     font-size: 43px;
     line-height: 50px;
+
+    grid-column: 1/3;
   }
 
-  @media (min-width: $desktop-width) {
+  @media (min-width: $vp-1150) {
     z-index: 1;
 
-    order: 2;
-    margin: 0;
-    padding: 0;
+    margin: 61px 0 35px 0;
 
     font-size: 53px;
     line-height: 57px;
+
+    grid-column: 1/-1;
+    grid-row: 1/2;
   }
 }
 
-.stock__product {
-  max-width: 100px;
+.stock__status {
+  display: block;
+  margin-bottom: 18px;
 
-  font-style: normal;
   font-weight: 700;
   font-size: 17px;
   line-height: 20px;
   color: $color-downy;
   text-transform: uppercase;
 
-  @media (min-width: $tablet-width) {
+  @media (min-width: $vp-768) {
+    position: absolute;
+    top: 5px;
+    right: 27px;
+
+    width: min-content;
+
     line-height: 17px;
+    text-align: center;
   }
 
-  @media (min-width: $desktop-width) {
-    margin-right: 70px;
+  @media (min-width: $vp-1150) {
+    top: calc(61px + 57px/2);
+    left: -143px;
+
+    margin: 0;
+
+    transform: translateY(-50%);
   }
 }
 
 .stock__description {
-  font-style: normal;
-  font-weight: 400;
+  margin: 0 0 28px;
+
   font-size: 15px;
-  line-height: 24px;
   color: $color-charcoal;
 
-  @media (min-width: $tablet-width) {
+  @media (min-width: $vp-768) {
+    margin: 0 0 48px;
+
     font-size: 17px;
-    line-height: 30px;
+  }
+
+  @media (min-width: $vp-1150) {
+    margin: 0 0 60px;
   }
 }
 
-.stock__table {
-  margin: 0 0 28px 0;
-  padding: 0;
-}
-
-.stock__table-item {
+.stock__info-list {
   display: flex;
-  width: 100%;
+  flex-direction: column;
+  margin: 0 0 41px;
 
-  border-bottom: 1px solid $color-whisper;
+  gap: 22px;
+
+  @media (min-width: $vp-768) {
+    margin: 0 0 70px;
+  }
+
+  @media (min-width: $vp-1150) {
+    margin: 0 0 124px;
+  }
 }
 
-.stock__table-term,
-.stock__table-definition {
-  padding: 12px 0 12px 0;
+.stock__info-item {
+  position: relative;
 
-  font-style: normal;
-  font-weight: 400;
+  display: grid;
+
+  grid-template-columns: 98px auto;
+
+  &::after {
+    content: "";
+    position: absolute;
+    bottom: -16px;
+
+    width: 100%;
+    height: 1px;
+
+    background-color: $color-whisper;
+  }
+}
+
+.stock__info-property {
   font-size: 15px;
   line-height: 20px;
+  color: $color-charcoal;
 }
 
-.stock__table-term {
-  width: 38%;
-}
-
-.stock__table-definition {
+.stock__info-value {
   margin: 0;
+
+  font-size: 15px;
+  line-height: 20px;
+  color: $color-charcoal;
 }
 
-.stock__image {
-  margin-bottom: 25px;
-
-  @media (min-width: $mobile-width) {
-    min-width: 260px;
-    max-width: 260px;
-    margin: 0 auto;
+.stock__picture-wrapper {
+  @media (min-width: $vp-768) {
+    grid-column: 2/-1;
+    grid-row: 2/-1;
   }
 
-  @media (min-width: $tablet-width) {
-    position: absolute;
-    top: 105px;
-    right: 50px;
+  @media (min-width: $vp-1150) {
+    grid-column: 2/-1;
+    grid-row: 1/-1;
   }
 }
 
-
-.stock__procuct-price {
+.stock__picture {
   display: block;
-  width: 260px;
+  width: 100%;
+  height: auto;
   margin-bottom: 25px;
 
-  font-style: normal;
-  font-weight: 700;
-  font-size: 17px;
-  line-height: 24px;
-  text-align: center;
+  object-fit: contain;
 
-  @media (min-width: $tablet-width) {
+  @media (min-width: $vp-768) {
+    margin: 0;
+  }
+}
+
+.stock__price {
+  display: block;
+  margin-bottom: 25px;
+
+  font-weight: 700;
+  text-align: center;
+  color: $color-charcoal;
+
+  @media (min-width: $vp-768) {
+    margin-bottom: 33px;
+
     font-size: 20px;
   }
 }
 
-.stock__product-order {
-  margin-bottom: 73px;
+.stock__order-wrapper {
+  @media (min-width: $vp-768) {
+    margin-top: auto;
+  }
+}
 
-  @media (min-width: $tablet-width) {
-    max-width: 292px;
+.stock__button {
+  display: block;
+  width: 100%;
 
+  @media (min-width: $vp-768) {
     font-size: 17px;
-  }
-}
-
-.stock__container {
-  @media (min-width: $tablet-width) {
-    display: flex;
-    align-items: center;
-    margin-bottom: 50px;
-  }
-}
-
-.stock__container--table {
-  @media (min-width: $mobile-width) {
-    max-width: 400px;
-    margin: 0 auto;
-  }
-
-  @media (min-width: $tablet-width) {
-    width: 50%;
-    max-width: 292px;
-    margin: 0;
-  }
-
-  @media (min-width: $desktop-width) {
-    max-width: 300px;
-    margin-left: 175px;
-  }
-}
-
-.stock__container-price {
-  @media (min-width: $mobile-width) {
-    min-width: 260px;
-    max-width: 260px;
-    margin: 0 auto;
-  }
-
-  @media (min-width: $tablet-width) {
-    width: 50%;
-    margin: 0;
-  }
-
-  @media (min-width: $desktop-width) {
-    max-width: 300px;
-    margin-left: 175px;
   }
 }
