--- a/source/sass/global/reboot.scss
+++ b/source/sass/global/reboot.scss
@@ -1,23 +1,31 @@
+
 *,
-*::before,
-*::after {
+*::after,
+*::before {
   box-sizing: border-box;
 }
 
-html,
+
 body {
-  height: 100%;
+  display: flex;
+  flex-direction: column;
   margin: 0;
   padding: 0;
+  min-height: 100vh;
 }
 
-body {
+main {
+  flex: 1 1 auto;
+}
+
+html {
+  font-family: $ff-open-sans;
   font-style: normal;
   font-weight: 400;
-  font-size: 15px;
-  line-height: 20px;
-  font-family: "Open Sans", "Arial", sans-serif;
-  color: #000000;
-
-  background-color: #ffffff;
+  font-size: 17px;
+  line-height: 24px;
+  color: $color-default-black;
+  margin: 0;
+  padding: 0;
+  height: 100vh;
 }
