--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -3,16 +3,19 @@ $color-white-smoke: #f1f1f1;
 $color-whisper: #ececec;
 $color-whisper-mod: #e5e5e5e5;
 $color-default-black: #000000;
+$color-aubergine: #231f20;
 $color-charcoal: #444444;
 $color-downy: #63d1bb;
 $color-downy-mod: #62d1ba;
 $color-downy-alter: #59d5bc;
-$color-ruerto-rico: #56c3b2;
-$color-ruerto-rico-mod: #46c1ae;
+$color-puerto-rico: #56c3b2;
+$color-puerto-rico-mod: #46c1ae;
 $color-silver: #c6c6c6;
 $color-snow: #f9f9f9;
 $solor-dark-green: rgba(0, 1, 1, 0.25);
 
-$mobile-width: 321px;
-$tablet-width: 768px;
-$desktop-width: 1150px;
+$ff-open-sans: "Open Sans", "Arial", sans-serif;
+
+$vp-321: 321px;
+$vp-768: 768px;
+$vp-1150: 1150px;
