Добавляет декоративные элементы

--- a/source/sass/blocks/categories.scss
+++ b/source/sass/blocks/categories.scss
@@ -21,7 +21,7 @@
       width: 100%;
       height: 24px;
 
-      background-image: url("../../img/zigzag-fill-tablet.svg");
+      background-image: url("../img/zigzag-fill-tablet.svg");
       background-position-x: center;
       background-size: auto 22.8px;
     }
