--- a/source/sass/blocks/features.scss
+++ b/source/sass/blocks/features.scss
@@ -124,7 +124,7 @@
     width: 33px;
     height: 32px;
 
-    background-image: url("../../img/package.svg");
+    background-image: url("../img/package.svg");
   }
 
   &:last-child {
