--- a/source/sass/blocks/rewiews.scss
+++ b/source/sass/blocks/rewiews.scss
@@ -115,7 +115,7 @@
     margin: 0 auto;
     margin-bottom: 85px;
 
-    background-image: url("../../img/review.jpg");
+    background-image: url("../img/review.jpg");
     background-repeat: no-repeat;
   }
 
