--- a/5/css/style.css
+++ b/5/css/style.css
@@ -489,7 +489,7 @@ html {
     display: block;
     width: 100%;
     height: 24px;
-    background-image: url("../../img/zigzag-fill-tablet.svg");
+    background-image: url("../img/zigzag-fill-tablet.svg");
     background-position-x: center;
     background-size: auto 22.8px;
   }
@@ -919,7 +919,7 @@ html {
   left: 0;
   width: 33px;
   height: 32px;
-  background-image: url("../../img/package.svg");
+  background-image: url("../img/package.svg");
 }
 .features__item:last-child {
   margin-bottom: 58px;
@@ -1554,7 +1554,7 @@ html {
     max-width: 900px;
     margin: 0 auto;
     margin-bottom: 85px;
-    background-image: url("../../img/review.jpg");
+    background-image: url("../img/review.jpg");
     background-repeat: no-repeat;
   }
 }
