--- a/source/sass/blocks/rewiews.scss
+++ b/source/sass/blocks/rewiews.scss
@@ -77,6 +77,7 @@
   width: 50%;
   height: 52px;
   padding: 0;
+  cursor: pointer;
 
   background-color: $color-default-white;
   border: 1px solid $color-whisper;
