--- a/5/css/style.css
+++ b/5/css/style.css
@@ -1519,6 +1519,7 @@ html {
   width: 50%;
   height: 52px;
   padding: 0;
+  cursor: pointer;
   background-color: #ffffff;
   border: 1px solid #ececec;
 }
@@ -2559,6 +2560,7 @@ html {
   position: absolute;
   top: 0;
   left: 215px;
+  pointer-events: none;
 }
 @media (min-width: 768px) {
   .form-group__contact {
@@ -2678,12 +2680,6 @@ html {
   color: #000000;
   text-decoration: none;
 }
-.catalog-item__link:hover {
-  opacity: 0.6;
-}
-.catalog-item__link:active {
-  opacity: 0.3;
-}
 
 .catalog-item__title {
   margin: 0 0 6px 0;
@@ -2728,34 +2724,39 @@ html {
 }
 
 .catalog-item__button {
+  opacity: 0.2;
   position: absolute;
   left: 90%;
+  cursor: pointer;
   background-color: inherit;
   border: none;
 }
-.catalog-item__button:hover svg {
+.catalog-item__button:hover {
   opacity: 1;
   fill: #63d1bb;
 }
-.catalog-item__button:focus svg {
+.catalog-item__button:focus {
   opacity: 1;
   fill: #63d1bb;
 }
-.catalog-item__button:active svg {
+.catalog-item__button:active {
   opacity: 0.3;
 }
 
 .manufacturing {
   padding: 0 30px;
+  padding-bottom: 58px;
 }
 @media (min-width: 768px) {
   .manufacturing {
     font-size: 50px;
+    padding-bottom: 64px;
   }
 }
 @media (min-width: 1150px) {
   .manufacturing {
     font-size: 50px;
+    padding-bottom: 105px;
   }
 }
 
@@ -2765,6 +2766,12 @@ html {
   max-width: 260px;
   margin: 0 auto;
   border: 1px solid #ececec;
+}
+.manufacturing__inner:hover {
+  box-shadow: 0 6px 10px rgba(0, 0, 0, 0.1);
+}
+.manufacturing__inner:active {
+  box-shadow: 0 3px 5px rgba(0, 0, 0, 0.1);
 }
 @media (min-width: 768px) {
   .manufacturing__inner {
@@ -2777,7 +2784,6 @@ html {
   .manufacturing__inner {
     display: grid;
     max-width: 1050px;
-    padding-bottom: 105px;
     grid-template-areas: "player-container tittle" "player-container manufacturing__order";
     grid-template-columns: 65% 1fr;
   }
@@ -2786,11 +2792,22 @@ html {
 .manufacturing__title {
   margin: 0;
   padding: 22px 13px 27px 91px;
+  position: relative;
   font-style: normal;
   font-weight: 700;
   font-size: 17px;
   line-height: 24px;
   grid-area: tittle;
+}
+.manufacturing__title::before {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 30px;
+  width: 32px;
+  height: 22px;
+  background-image: url("../img/video.svg");
+  transform: translateY(-50%);
 }
 @media (min-width: 768px) {
   .manufacturing__title {
@@ -2802,11 +2819,16 @@ html {
     padding-top: 96px;
     padding-left: 60px;
   }
+  .manufacturing__title::before {
+    top: 30px;
+    left: 58px;
+    transform: translateY(0);
+  }
 }
 
 .manufacturing__descriprion {
   margin: 0;
-  padding: 35px 0 41px 0;
+  padding: 0 0 41px 0;
   font-style: normal;
   font-weight: 400;
   font-size: 13px;
@@ -2831,7 +2853,7 @@ html {
 }
 @media (min-width: 1150px) {
   .manufacturing__order {
-    padding: 47px 36px 60px 80px;
+    padding: 0 36px 60px 80px;
   }
 }
 
@@ -2856,24 +2878,37 @@ html {
 
 .manufacturing__player-container {
   grid-area: player-container;
+  position: relative;
 }
 
 .manufacturing__player-button {
   position: absolute;
-  top: 126px;
+  top: 50%;
   left: 50%;
-  background-color: inherit;
+  padding: 0;
+  width: 100px;
+  height: 77px;
+  background-color: transparent;
   border: none;
-  transform: translateX(-50%);
+  transform: translateX(-50%) translateY(-50%);
+  cursor: pointer;
+}
+.manufacturing__player-button::before {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 100%;
+  height: 100%;
+  background-image: url("../img/play.svg");
+  transform: translateX(-50%) translateY(-50%);
+}
+.manufacturing__player-button:hover {
+  transform: translateX(-50%) translateY(-50%) scale(1.2);
 }
 .manufacturing__player-button:active {
+  transform: translateX(-50%) translateY(-50%) scale(0.8);
   opacity: 0.3;
-}
-@media (min-width: 1150px) {
-  .manufacturing__player-button {
-    top: 205px;
-    left: 33%;
-  }
 }
 
 @media (min-width: 768px) {
