--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -5,11 +5,13 @@
     max-width: 1150px;
     margin: 0 auto;
     margin-bottom: 105px;
+    padding-top: 39px;
   }
 }
 
 .contacts__title {
   margin: 0;
+  margin-bottom: 27px;
 
   font-style: normal;
   font-weight: 700;
@@ -26,6 +28,7 @@
   @media (min-width: $vp-1150) {
     font-size: 53px;
     line-height: 57px;
+    margin-bottom: 35px;
   }
 }
 
@@ -45,9 +48,15 @@
   }
 }
 
+.contacts__address-street {
+  @media (min-width: $vp-768) {
+    padding-right: 30px;
+  }
+}
+
 .contacts__email,
 .contacts__address {
-  margin-right: 35px;
+  margin-right: 34px;
 
   @media (min-width: $vp-768) {
     margin-right: 24px;
@@ -58,15 +67,13 @@
   display: flex;
 
   &--email {
-    margin-bottom: 50px;
-  }
-
-  &--address {
-    margin-bottom: 62px;
+    margin-bottom: 30px;
   }
 }
 
 .contacts__email-link {
+  max-height: 28px;
+
   color: $color-charcoal;
   text-decoration: none;
 
@@ -80,33 +87,36 @@
     border-color: rgba($color-downy-mod, 0.1);
   }
 
-  @media (min-width: $vp-768) {
-    height: 30px;
+  @media (min-width: $vp-1150) {
+    max-height: 35px;
   }
 }
 
 .contacts__map-wrapper {
   margin: 0 auto;
-  margin-bottom: 42px;
+  margin-bottom: 39px;
 
   @media (min-width: $vp-768) {
     max-width: 768px;
+    margin-bottom: 52px;
   }
 
 
   @media (min-width: $vp-1150) {
     position: absolute;
     top: -40px;
-    right: 45px;
+    right: 49px;
   }
 }
 
 .contacts__button {
   margin: 0 auto;
-  margin-bottom: 55px;
+  margin-bottom: 40px;
 
   @media (min-width: $vp-768) {
     font-size: 17px;
+    margin-bottom: 58px;
+    max-width: 225px;
   }
 
   @media (min-width: $vp-1150) {
@@ -119,19 +129,19 @@
   @media (min-width: $vp-768) {
     display: grid;
 
-    gap: 25px;
     grid-template-columns: 1fr 1fr;
   }
 
   @media (min-width: $vp-1150) {
     display: flex;
     flex-direction: column;
-    max-width: 300px;
+    padding-right: 460px;
+    margin-bottom: 84px;
   }
 }
 
 .contacts__inner {
-  padding: 0 30px;
+  padding: 40px 30px 62px;
 
   @media (min-width: $vp-321) {
     max-width: 600px;
@@ -143,12 +153,13 @@
 
     max-width: 990px;
     margin: 0 auto;
+    padding: 66px 50px 50px;
 
     &::after {
       content: "";
       position: absolute;
-      top: 0;
-      right: 50px;
+      top: 45px;
+      right: 53px;
 
       width: 47px;
       height: 81px;
@@ -158,13 +169,13 @@
   }
 
   @media (min-width: $vp-1150) {
-    padding: 0 50px 0 125px;
+    padding: 0 50px 0 144px;
 
 
     &::after {
       content: "";
       position: absolute;
-      top: 10px;
+      top: -17px;
       left: 33px;
 
       width: 47px;
