--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -10,8 +10,28 @@
 
   border: none;
 
+  &--contacts {
+    @media (min-width: $vp-768) {
+      display: grid;
+    }
+  }
+
+  &--grey {
+    @media (min-width: $vp-768) {
+      padding-top: 62px;
+    }
+
+    @media (min-width: $vp-1150) {
+      padding-top: 50px;
+    }
+  }
+
   @media (min-width: $vp-768) {
     margin-bottom: 70px;
+
+    &--type {
+      margin-bottom: 58px;
+    }
   }
 }
 
@@ -26,6 +46,26 @@
   line-height: 16px;
   color: $color-downy;
   text-transform: uppercase;
+
+  &--type {
+    margin-bottom: 17px;
+  }
+
+  &--color {
+    margin-bottom: 35px;
+  }
+
+  &--about {
+    margin-bottom: 29px;
+  }
+
+  &--contacts {
+    margin-bottom: 19px;
+  }
+
+  &--additionally {
+    margin-bottom: 23px;
+  }
 
   &::before {
     content: "";
@@ -46,7 +86,7 @@
 
   @media (min-width: $vp-768) {
     float: left;
-    margin-right: 80px;
+    margin-right: 56px;
   }
 
   @media (min-width: $vp-1150) {
@@ -76,7 +116,7 @@
     padding-left: 60px;
 
     @media (min-width: $vp-768) {
-      padding-left: 70px;
+      padding-left: 103px;
     }
   }
 
@@ -85,14 +125,14 @@
     padding: 14px 20px 10px 60px;
 
     @media (min-width: $vp-768) {
-      padding-left: 70px;
+      padding: 0 20px 10px 100px;
     }
   }
 }
 
 .form__list {
   margin: 0;
-  margin-bottom: 43px;
+  margin-bottom: 31px;
   padding: 0;
 
   list-style: none;
@@ -101,17 +141,18 @@
     display: grid;
     margin-bottom: 0;
   }
-}
 
-.form__list--has-wrapper {
-  @media (min-width: $vp-768) {
-    display: grid;
+  &--has-wrapper {
+    @media (min-width: $vp-768) {
+      display: grid;
 
-    grid-template-columns: 1fr 1fr;
-  }
+      gap: 6px 30px;
+      grid-template-columns: 1fr 1fr;
+    }
 
-  @media (min-width: $vp-1150) {
-    grid-template-columns: 1fr 1fr 1fr;
+    @media (min-width: $vp-1150) {
+      grid-template-columns: 1fr 1fr 1fr;
+    }
   }
 }
 
@@ -134,10 +175,59 @@
     margin-bottom: 43px;
   }
 
-  &--about,
+  &--about {
+    width: 100%;
+    padding: 13px 0;
+
+    border-bottom: 2px solid $color-default-black;
+
+    &::placeholder {
+      font-size: 17px;
+      line-height: 18px;
+      color: $color-default-black;
+
+      opacity: 0.3;
+    }
+
+    &:hover {
+      border-color: $color-downy-mod;
+    }
+
+    &:hover ~ svg {
+      opacity: 1;
+
+      fill: $color-downy-mod;
+    }
+
+    &:focus {
+      border-color: $color-downy-mod;
+      outline: none;
+    }
+
+    &:focus ~ svg {
+      opacity: 1;
+
+      fill: $color-downy-mod;
+    }
+
+    &:active {
+      border-color: $color-downy-mod;
+    }
+
+    &:active ~ svg {
+      opacity: 1;
+
+      fill: $color-downy-mod;
+    }
+
+    @media (min-width: $vp-768) {
+      padding-left: 15px;
+    }
+  }
+
   &--contacts {
     width: 100%;
-    padding: 15px 0;
+    padding: 20px 0;
 
     border-bottom: 2px solid $color-default-black;
 
@@ -247,6 +337,7 @@
     }
 
     &--checkbox {
+      top: 21px;
       left: -1px;
 
       width: 52px;
@@ -273,26 +364,6 @@
 
     background-image: url("../img/tablet-tick.svg");
   }
-}
-
-.form-group__title--type {
-  margin-bottom: 35px;
-}
-
-.form-group__title--color {
-  margin-bottom: 35px;
-}
-
-.form-group__title--about {
-  margin-bottom: 29px;
-}
-
-.form-group__title--contacts {
-  margin-bottom: 19px;
-}
-
-.form-group__title--additionally {
-  margin-bottom: 23px;
 }
 
 .form-group__textarea {
@@ -379,79 +450,55 @@
 
 .form__item {
   @media (min-width: $vp-768) {
-    margin-bottom: 50px;
-
-    &:last-child {
-      margin-bottom: 0;
-    }
-  }
-}
-
-.form__item--about {
-  margin-bottom: 22px;
-
-  @media (min-width: $vp-768) {
-    display: flex;
-    align-items: center;
-    max-width: 501px;
-    margin-bottom: 41px;
+    margin-bottom: 46px;
 
     &:last-child {
       margin-bottom: 0;
     }
   }
 
-  @media (min-width: $vp-1150) {
-    max-width: 700px;
-  }
-}
+  &--about {
+    margin-bottom: 22px;
 
-.form__item--checkbox {
-  margin-bottom: 43px;
+    @media (min-width: $vp-768) {
+      display: flex;
+      align-items: center;
+      max-width: 501px;
+      margin-bottom: 41px;
+
+      &:last-child {
+        margin-bottom: 0;
+      }
+    }
+
+    @media (min-width: $vp-1150) {
+      max-width: 700px;
+    }
+  }
+
+  &--checkbox {
+    margin-bottom: 37px;
+
+    @media (min-width: $vp-768) {
+      margin-bottom: 50px;
+
+      &:last-child {
+        margin-bottom: 0;
+      }
+    }
+  }
 
   @media (min-width: $vp-768) {
-    margin-bottom: 55px;
+    margin-bottom: 46px;
 
     &:last-child {
       margin-bottom: 0;
     }
-  }
-}
-
-
-.form-group--contacts {
-  @media (min-width: $vp-768) {
-    display: grid;
-  }
-}
-
-.form-group__input--contacts {
-  width: 100%;
-  padding: 15px 0;
-
-  @media (min-width: $vp-768) {
-    max-width: 501px;
-
-    background-color: $color-white-smoke;
-  }
-
-  @media (min-width: $vp-1150) {
-    max-width: 700px;
-  }
-}
-
-.form-group--grey {
-  @media (min-width: $vp-768) {
-    padding-top: 65px;
-  }
-
-  @media (min-width: $vp-1150) {
-    padding-top: 50px;
   }
 }
 
 .form-group__container {
-  margin-bottom: 22px;
+  margin-bottom: 8px;
 
 
   @media (min-width: $vp-768) {
@@ -514,7 +561,7 @@
   padding: 0 30px;
 
   &--last {
-    margin-bottom: 17px;
+    margin-bottom: 11px;
   }
 
   @media (min-width: $vp-321) {
@@ -523,7 +570,7 @@
 
   @media (min-width: $vp-768) {
     max-width: 768px;
-    padding: 0 50px;
+    padding: 0 57px 0 72px;
   }
 
   @media (min-width: $vp-1150) {
@@ -541,8 +588,8 @@
 
 .form-group__contact {
   position: absolute;
-  top: 0;
-  left: 215px;
+  top: 3px;
+  left: 227px;
 
   pointer-events: none;
 
