--- a/source/sass/blocks/knitting.scss
+++ b/source/sass/blocks/knitting.scss
@@ -1,5 +1,10 @@
 .knitting {
   width: 100%;
+  padding-top: 18px;
+
+  @media (min-width: $vp-768) {
+    padding-top: 52px;
+  }
 }
 
 .knitting__description {
@@ -21,7 +26,7 @@
 
   @media (min-width: $vp-768) {
     max-width: 668px;
-    padding: 0 50px;
+    padding: 0 22px;
 
     font-size: 17px;
     line-height: 30px;
