--- a/source/sass/blocks/manufacturing.scss
+++ b/source/sass/blocks/manufacturing.scss
@@ -9,6 +9,7 @@
   }
 
   @media (min-width: $vp-1150) {
+    padding-top: 2px;
     padding-bottom: 105px;
 
     font-size: 50px;
@@ -55,7 +56,7 @@
   position: relative;
 
   margin: 0;
-  padding: 22px 13px 27px 91px;
+  padding: 20px 13px 27px 91px;
 
   font-style: normal;
   font-weight: 700;
@@ -68,7 +69,7 @@
     content: "";
     position: absolute;
     top: 50%;
-    left: 30px;
+    left: 32px;
 
     width: 32px;
     height: 22px;
@@ -78,16 +79,21 @@
   }
 
   @media (min-width: $vp-768) {
+    padding: 38px 13px 27px 106px;
+
     font-size: 20px;
+
+    &::before {
+      left: 41px;
+    }
   }
 
   @media (min-width: $vp-1150) {
-    padding-top: 96px;
-    padding-left: 60px;
+    padding: 96px 70px 0 80px;
 
     &::before {
-      top: 30px;
-      left: 58px;
+      top: 46px;
+      left: 79px;
 
       transform: translateY(0);
     }
@@ -95,8 +101,8 @@
 }
 
 .manufacturing__descriprion {
-  margin: 0;
-  padding: 0 0 41px 0;
+  margin: 0 0 45px;
+  padding: 0;
 
   font-style: normal;
   font-weight: 400;
@@ -105,13 +111,19 @@
   color: $color-charcoal;
 
   @media (min-width: $vp-768) {
+    margin-bottom: 40px;
+
     font-size: 15px;
     line-height: 30px;
+  }
+
+  @media (min-width: $vp-1150) {
+    margin-bottom: 55px;
   }
 }
 
 .manufacturing__order {
-  padding: 13px 30px 34px;
+  padding: 28px 32px 34px;
 
   grid-area: manufacturing__order;
 
@@ -120,7 +132,7 @@
   }
 
   @media (min-width: $vp-1150) {
-    padding: 0 36px 60px 80px;
+    padding: 0 36px 38px 80px;
   }
 }
 
@@ -186,4 +198,3 @@
     opacity: 0.3;
   }
 }
-
