--- a/source/sass/blocks/page-footer.scss
+++ b/source/sass/blocks/page-footer.scss
@@ -31,6 +31,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    padding: 0;
 
     &::after {
       display: none;
@@ -66,7 +67,7 @@
 
   list-style: none;
 
-  gap: 11.15%;
+  gap: 13.15%;
 
   @media (min-width: $vp-768) {
     justify-content: space-between;
