--- a/source/sass/blocks/rewiews.scss
+++ b/source/sass/blocks/rewiews.scss
@@ -1,20 +1,20 @@
 .reviews {
-  padding: 29px 30px 51px 30px;
+  padding: 1px 30px 51px 30px;
 
   background-image: url("../img/zigzag-line-mobile.svg");
   background-repeat: repeat-x;
   background-position: bottom;
 
   @media (min-width: $vp-768) {
-    margin-bottom: 68px;
-    padding: 77px 50px 85px;
+    padding: 86px 50px 138px;
 
     background-image: url("../img/zigzag-line-tablet.svg");
   }
 
   @media (min-width: $vp-1150) {
-    margin-bottom: 71px;
-    padding: 78px 50px 130px 224px;
+    margin-bottom: 112px;
+    padding: 85px 50px 190px 224px;
+    background-image: url("../img/zigzag-line-desktop.svg");
   }
 }
 
@@ -23,6 +23,7 @@
     position: relative;
 
     display: grid;
+    padding-top: 23px;
 
     grid-template-areas: "title . write-button"
     "text text text"
@@ -53,6 +54,7 @@
     grid-template-columns: max-content 1fr 0.38fr;
 
     &::before {
+      top: -54px;
       left: -174px;
     }
   }
@@ -67,7 +69,7 @@
 
   @media (min-width: $vp-768) {
     align-self: end;
-    margin: 0;
+    margin: 0 0 39px;
 
     font-size: 43px;
     line-height: 50px;
@@ -78,6 +80,7 @@
   @media (min-width: $vp-1150) {
     font-size: 53px;
     line-height: 57px;
+    margin-bottom: 36px;
   }
 }
 
@@ -89,15 +92,19 @@
   color: $color-charcoal;
 
   @media (min-width: $vp-768) {
-    margin: 41px 0 61px;
+    margin: 0 0 61px;
 
     font-size: 17px;
 
     grid-area: text;
+
+    & > br {
+      display: none;
+    }
   }
 
   @media (min-width: $vp-1150) {
-    margin: 34px 70px 44px 0;
+    margin: 0 70px 44px 0;
   }
 }
 
@@ -146,7 +153,7 @@
 .reviews__slider-buttons {
   display: flex;
   max-width: 400px;
-  margin: 0 auto 38px;
+  margin: 0 auto 41px;
 
   @media (min-width: $vp-768) {
     margin: 0;
@@ -206,6 +213,7 @@
   margin: 0 auto;
 
   @media (min-width: $vp-768) {
+    max-width: 175px;
     margin: 0;
 
     grid-area: write-button;
