--- a/source/sass/blocks/zig-zag.scss
+++ b/source/sass/blocks/zig-zag.scss
@@ -8,4 +8,8 @@
   @media (min-width: $vp-768) {
     background-image: url("../img/zigzag-line-tablet.svg");
   }
+
+  @media (min-width: $vp-1150) {
+    background-image: url("../img/zigzag-line-desktop.svg");
+  }
 }
