Выравнивает отступы кнопок

--- a/source/sass/blocks/manufacturing.scss
+++ b/source/sass/blocks/manufacturing.scss
@@ -143,6 +143,7 @@
   font-weight: 700;
   font-size: 18px;
   line-height: 16px;
+  padding: 16px;
 
   @media (min-width: $vp-768) {
     max-width: 584px;
