--- a/source/sass/blocks/categories.scss
+++ b/source/sass/blocks/categories.scss
@@ -21,7 +21,7 @@
       width: 100%;
       height: 24px;
 
-      background-image: url("../img/icons/zig-zag/zigzag-fill-tablet.svg");
+      background-image: url("../img/icons/zigzag-fill-tablet.svg");
       background-position-x: center;
       background-size: auto 23.8px;
     }
@@ -37,7 +37,7 @@
 }
 
 .categories__container {
-  padding: 73px 30px 115px;
+  padding: 73px 30px 120px;
 
   background-color: $color-snow;
   background-image: url("../img/background/index-intro-mobile@1x.jpg");
@@ -123,30 +123,30 @@
   &:nth-child(even) {
     background-color: $color-puerto-rico;
 
-    & .categories__link:hover {
+    .categories__link:hover {
       background-color: $color-puerto-rico-mod;
       transform: translateY(-5px);
     }
 
-    & .categories__link:hover::after {
+    .categories__link:hover::after {
       opacity: 0.7;
     }
 
-    & .categories__link:active::after {
+    .categories__link:active::after {
       opacity: 0.3;
     }
   }
 
-  & .categories__link:hover {
+  .categories__link:hover {
     background-color: $color-downy-alter;
     transform: translateY(-5px);
   }
 
-  & .categories__link:hover::after {
+  .categories__link:hover::after {
     opacity: 0.7;
   }
 
-  & .categories__link:active::after {
+  .categories__link:active::after {
     opacity: 0.3;
   }
 
@@ -158,30 +158,30 @@
     &:nth-child(even) {
       background-color: $color-puerto-rico;
 
-      & .categories__link:hover {
+      .categories__link:hover {
         background-color: $color-puerto-rico-mod;
         transform: translateY(-5px);
       }
 
-      & .categories__link:hover::after {
+      .categories__link:hover::after {
         opacity: 0.7;
       }
 
-      & .categories__link:active::after {
+      .categories__link:active::after {
         opacity: 0.3;
       }
     }
 
-    & .categories__link:hover {
+    .categories__link:hover {
       background-color: $color-downy-alter;
       transform: translateY(-5px);
     }
 
-    & .categories__link:hover::after {
+    .categories__link:hover::after {
       opacity: 0.7;
     }
 
-    & .categories__link:active::after {
+    .categories__link:active::after {
       opacity: 0.3;
     }
 
@@ -193,8 +193,8 @@
 
 .categories__link {
   display: block;
-  height: 103px;
-  padding: 24px 160px 31px 30px;
+  min-height: 103px;
+  padding: 24px 115px 31px 30px;
 
   font-style: normal;
   font-weight: 700;
@@ -212,7 +212,7 @@
     width: 40px;
     height: 62px;
 
-    background-image: url("../img/icons/index/interior.svg");
+    background-image: url("../img/icons/interior.svg");
     opacity: 0.5;
 
     @media (min-width: $vp-768) {
@@ -229,7 +229,7 @@
     width: 60px;
     height: 60px;
 
-    background-image: url("../img/icons/index/toy.svg");
+    background-image: url("../img/icons/toy.svg");
     opacity: 0.5;
 
     @media (min-width: $vp-768) {
@@ -249,6 +249,6 @@
 
   @media (min-width: $vp-1150) {
     min-height: 122px;
-    padding-right: 310px;
+    padding-right: 115px;
   }
 }
