--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -1,231 +1,240 @@
 .contacts {
+  position: relative;
+
+  max-width: 1150px;
+  margin: 0 auto;
+
   @media (min-width: $vp-1150) {
-    position: relative;
-
     display: grid;
-    max-width: 1050px;
-    margin: 0 auto;
-    margin-bottom: 48px;
-    padding-left: 30px;
+    margin-bottom: 105px;
 
-    column-gap: 15px;
+    grid-template-columns: repeat(2, min-content);
+  }
+}
 
-    grid-template-columns: 1fr 1fr;
+.contacts__container {
+  position: relative;
+
+  padding: 40px 30px 62px;
+
+  @media (min-width: $vp-768) {
+    padding: 67px 50px 49px;
+  }
+
+  @media (min-width: $vp-1150) {
+    padding: 150px 10px 85px 224px;
+  }
+
+  &::before {
+    @media (min-width: $vp-768) {
+      content: url("../img/icons/flag.svg");
+      position: absolute;
+      top: 44px;
+      right: 53px;
+
+      width: 47px;
+      height: 81px;
+    }
+
+    @media (min-width: $vp-1150) {
+      top: 133px;
+      left: 113px;
+    }
   }
 }
 
 .contacts__title {
   margin: 0;
-  margin-bottom: 27px;
+  padding-bottom: 28px;
 
-  font-style: normal;
-  font-weight: 700;
   font-size: 25px;
   line-height: 30px;
 
   @media (min-width: $vp-768) {
-    margin-bottom: 49px;
+    padding-bottom: 49px;
 
     font-size: 43px;
     line-height: 50px;
-  }
 
-  @media (min-width: $vp-1150) {
-    margin-bottom: 35px;
+    @media (min-width: $vp-1150) {
+      padding-bottom: 34px;
 
-    font-size: 53px;
-    line-height: 57px;
+      font-size: 53px;
+      line-height: 57px;
+    }
   }
 }
 
-.contacts__email,
-.contacts__email-link,
-.contacts__address,
-.contacts__address-street {
+.contacts__company {
   margin: 0;
+  padding: 0;
 
-  font-style: normal;
+  list-style-type: none;
   font-weight: 400;
   font-size: 14px;
   line-height: 30px;
-
-  @media (min-width: $vp-768) {
-    font-size: 17px;
-  }
-}
-
-.contacts__address-street {
-  @media (min-width: $vp-768) {
-    padding-right: 60px;
-  }
-}
-
-.contacts__email,
-.contacts__address {
-  margin-right: 34px;
-
-  @media (min-width: $vp-768) {
-    margin-right: 24px;
-  }
-}
-
-.contacts__container {
-  display: flex;
-
-
-  &--email {
-    margin-bottom: 30px;
-  }
-}
-
-.contacts__email-link {
-  max-height: 28px;
-
   color: $color-charcoal;
-  text-decoration: none;
 
-  border-bottom: 1px solid $color-downy-mod;
+  @media (min-width: $vp-768) {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    padding-right: 25px;
 
-  &:hover {
-    color: $color-puerto-rico-mod;
-  }
-
-  &:active {
-    border-color: rgba($color-downy-mod, 0.1);
+    font-size: 17px;
   }
 
   @media (min-width: $vp-1150) {
-    max-height: 35px;
+    flex-direction: column;
   }
 }
 
-.contacts__map-wrapper {
+.contacts__item {
+  display: grid;
+
+  column-gap: 10px;
+
+  grid-template-columns: 66px 183px;
+
+  &:not(:last-child) {
+    padding-bottom: 30px;
+  }
+
+  @media (min-width: $vp-768) {
+    padding-bottom: 0;
+
+    grid-template-columns: 70px 230px;
+  }
+
+  @media (min-width: $vp-1150) {
+    &:not(:last-child) {
+      padding-bottom: 32px;
+    }
+  }
+}
+
+.contacts__wrapper {
+  margin: 0 auto;
+  padding: 42px 30px 39px;
+
+  @media (max-width: $vp-768) {
+    max-width: 400px;
+  }
+
+  @media (min-width: $vp-768) {
+    width: 230px;
+    padding: 57px 0 57px;
+  }
+
+  @media (min-width: $vp-1150) {
+    margin: 0;
+    padding: 0;
+    padding-left: 224px;
+  }
+}
+
+.contacts__map {
   position: relative;
 
-  max-width: 320px;
-  margin: 0 auto;
-  margin-bottom: 32px;
+  width: 100%;
+  height: 454px;
 
   &::before {
-    content: "";
+    content: url("../img/icons/map-pin.svg");
     position: absolute;
-    top: 42%;
-    left: 54%;
-    z-index: 1;
+    top: 43%;
+    left: 53%;
+    z-index: 3;
 
     width: 67px;
     height: 100px;
 
-    background-image: url("../img/icons/index/map-pin.svg");
-    background-repeat: no-repeat;
     transform: translateX(-50%) translateY(-50%);
   }
-
-  @media (min-width: $vp-768) {
-    max-width: 768px;
-    margin-bottom: 52px;
-
-    &::before {
-      top: 41%;
-      left: 52%;
-    }
-  }
-
-  @media (min-width: $vp-1150) {
-    &::before {
-      top: 43%;
-      left: 50%;
-    }
-  }
-}
-
-.contacts__iframe {
-  position: absolute;
-
-  display: block;
-  width: 100%;
-  height: 454px;
-
-  border: none;
 
   @media (min-width: $vp-768) {
     height: 457px;
   }
 
   @media (min-width: $vp-1150) {
-    left: -115px;
+    width: 527px;
+    margin-top: 71px;
 
+    grid-column: 2/3;
+    grid-row: 1/-3;
+  }
+}
+
+.contacts__iframe {
+  display: block;
+  width: 100%;
+  height: 454px;
+
+  border: none;
+
+  grid-row: 2/3;
+
+  @media (min-width: $vp-768) {
+    height: 457px;
+  }
+
+  @media (min-width: $vp-1150) {
+    width: 527px;
+  }
+}
+
+.contacts__image {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+
+  display: block;
+  width: 100%;
+
+  object-fit: cover;
+
+  @media (min-width: $vp-768) {
+    height: 457px;
+  }
+
+  @media (min-width: $vp-1150) {
     width: 527px;
   }
 }
 
 .contacts__button {
-  margin: 0 auto;
-  margin-bottom: 40px;
-
   @media (min-width: $vp-768) {
-    max-width: 225px;
-    margin-bottom: 58px;
-
-    font-size: 17px;
-  }
-
-  @media (min-width: $vp-1150) {
-    position: absolute;
-    top: 407px;
-    left: 178px;
+    max-width: 230px;
   }
 }
 
-.contacts__wrapper {
+.contacts__description {
+  position: relative;
+
+  color: inherit;
+  text-decoration: none;
+}
+
+.contacts__description--underline::after {
+  content: "";
+  position: absolute;
+  top: 26px;
+  left: 0;
+
+  width: 167px;
+  height: 1px;
+
+  background-color: $color-downy;
+
   @media (min-width: $vp-768) {
-    display: grid;
-
-    grid-template-columns: 1fr 1fr;
-  }
-
-  @media (min-width: $vp-1150) {
-    display: flex;
-    flex-direction: column;
-    margin-bottom: 84px;
+    width: 204px;
   }
 }
 
-.contacts__inner {
-  padding: 40px 30px 58px;
-
-  @media (min-width: $vp-321) {
-    max-width: 600px;
-    margin: 0 auto;
-  }
-
-  @media (min-width: $vp-768) {
-    position: relative;
-
-    max-width: 990px;
-    margin: 0 auto;
-    padding: 66px 50px 50px;
-
-    &::after {
-      content: "";
-      position: absolute;
-      top: 45px;
-      right: 53px;
-
-      width: 47px;
-      height: 81px;
-
-      background-image: url("../img/icons/index/flag.svg");
-    }
-  }
-
-  @media (min-width: $vp-1150) {
-    padding: 80px 0 0 144px;
-
-
-    &::after {
-      top: 61px;
-      left: 33px;
-    }
+.contacts__description--underline {
+  &:hover,
+  &:focus {
+    color: $color-downy;
   }
 }
