--- a/source/sass/blocks/features.scss
+++ b/source/sass/blocks/features.scss
@@ -1,215 +1,137 @@
 .features__tittle {
-  margin: 0 0 82px 0;
+  margin: 0 0 30px 0;
 
   font-style: normal;
   font-weight: 700;
   font-size: 25px;
   line-height: 30px;
 
-  @media (min-width: $vp-321) {
-    margin: 0 auto;
-    margin-bottom: 82px;
-  }
-
   @media (min-width: $vp-768) {
-    margin-bottom: 97px;
+    margin-bottom: 42px;
 
     font-size: 43px;
     line-height: 50px;
   }
 
   @media (min-width: $vp-1150) {
+    margin-bottom: 39px;
+
     font-size: 53px;
     line-height: 57px;
   }
 }
 
 .features__list {
+  display: grid;
   margin: 0;
   padding: 0;
 
   list-style: none;
 
-  @media (min-width: $vp-321) {
-    min-width: 260px;
-    max-width: 260px;
-    margin: 0 auto;
-  }
+  grid-template-columns: 1fr;
+  row-gap: 30px;
 
   @media (min-width: $vp-768) {
-    display: grid;
-    max-width: 700px;
-    margin: 0 auto;
+    column-gap: 1px;
 
     grid-template-columns: 1fr 1fr;
+    row-gap: 55px;
+  }
+
+  @media (min-width: $vp-1150) {
+    column-gap: 0;
   }
 }
 
 .features__item {
   position: relative;
 
-  margin-bottom: 81px;
+  padding-top: 53px;
 
   font-style: normal;
   font-weight: 700;
   font-size: 17px;
   line-height: 20px;
+  color: $color-default-black;
 
   &--ecology::after {
     content: "";
     position: absolute;
-    top: -65px;
-    left: 7px;
+    top: -1px;
+    left: 8px;
 
     width: 33px;
     height: 38px;
 
-    background-image: url("../img/ecology.svg");
+    background-image: url("../img/icons/ecology.svg");
   }
 
   &--prise::after {
     content: "";
     position: absolute;
-    top: -65px;
+    top: -3px;
     left: 0;
 
     width: 47px;
     height: 27px;
 
-    background-image: url("../img/prise.svg");
+    background-image: url("../img/icons/prise.svg");
   }
 
   &--like::after {
     content: "";
     position: absolute;
-    top: -65px;
+    top: 4px;
     left: 7px;
 
     width: 34px;
     height: 27px;
 
-    background-image: url("../img/like.svg");
+    background-image: url("../img/icons/like.svg");
   }
 
   &--natural::after {
     content: "";
     position: absolute;
-    top: -65px;
-    left: 0;
+    top: -2px;
+    left: 3px;
 
     width: 35px;
     height: 34px;
 
-    background-image: url("../img/natural.svg");
+    background-image: url("../img/icons/natural.svg");
   }
 
   &--support::after {
     content: "";
     position: absolute;
-    top: -65px;
-    left: -7px;
+    top: 2px;
+    left: -6px;
 
     width: 55px;
     height: 23px;
 
-    background-image: url("../img/support.svg");
+    background-image: url("../img/icons/support.svg");
   }
 
   &--package::after {
     content: "";
     position: absolute;
-    top: -65px;
-    left: 0;
+    top: 0;
+    left: 3px;
 
     width: 33px;
     height: 32px;
 
-    background-image: url("../img/package.svg");
+    background-image: url("../img/icons/package.svg");
   }
 
   &:last-child {
     margin-bottom: 0;
   }
 
-  &--ecology::after {
-    content: "";
-    position: absolute;
-    top: -53px;
-    left: 8px;
-
-    width: 33px;
-    height: 38px;
-
-    background-image: url("../img/icons/index/ecology.svg");
-
-    @media (min-width: $vp-768) {
-      top: -58px;
-    }
-  }
-
-  &--prise::after {
-    content: "";
-    position: absolute;
-    top: -52px;
-    left: 0;
-
-    width: 47px;
-    height: 27px;
-
-    background-image: url("../img/icons/index/prise.svg");
-  }
-
-  &--like::after {
-    content: "";
-    position: absolute;
-    top: -48px;
-    left: 7px;
-
-    width: 34px;
-    height: 27px;
-
-    background-image: url("../img/icons/index/like.svg");
-  }
-
-  &--natural::after {
-    content: "";
-    position: absolute;
-    top: -50px;
-    left: 3px;
-
-    width: 35px;
-    height: 34px;
-
-    background-image: url("../img/icons/index/natural.svg");
-  }
-
-  &--support::after {
-    content: "";
-    position: absolute;
-    top: -50px;
-    left: -6px;
-
-    width: 55px;
-    height: 23px;
-
-    background-image: url("../img/icons/index/support.svg");
-  }
-
-  &--package::after {
-    content: "";
-    position: absolute;
-    top: -51px;
-    left: 3px;
-
-    width: 33px;
-    height: 32px;
-
-    background-image: url("../img/icons/index/package.svg");
-  }
-
-
   @media (min-width: $vp-768) {
-    margin-bottom: 110px;
+    padding-top: 55px;
 
     font-size: 20px;
     line-height: 22px;
@@ -239,9 +161,13 @@
       order: 6;
     }
   }
+
+  @media (min-width: $vp-1150) {
+padding-top: 57px;
+  }
 }
 
-.featutes__container {
+.features__container {
   margin-bottom: 58px;
   padding: 0 30px;
 
