--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -1,4 +1,3 @@
-
 .footer {
   min-height: 160px;
 
@@ -64,15 +63,16 @@
 
 .footer__socials-list {
   display: flex;
-  justify-content: center;
+  flex-wrap: wrap;
   align-items: center;
   min-height: 80px;
   margin: 0;
-  padding: 25px 0 28px;
+  padding: 25px 50px 28px;
 
   list-style: none;
 
-  gap: 8.15%;
+  gap: 13.15%;
+  row-gap: 5px;
 
   @media (min-width: $vp-768) {
     justify-content: space-between;
