--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -91,6 +91,7 @@
       grid-template-columns: 176px 1fr;
     }
 
+
     .form__legend {
       margin-bottom: 31px;
 
@@ -272,7 +273,7 @@
       padding: 0 28px 0 72px;
     }
 
-    @media (min-width: $vp-768) {
+    @media (min-width: $vp-1150) {
       padding-left: 50px;
     }
 
@@ -323,6 +324,7 @@
 
   &--text {
     @media (min-width: $vp-768) {
+      margin-top: 53px;
       margin-bottom: 53px;
       padding-right: 28px;
     }
@@ -480,7 +482,7 @@
 
   &:checked {
     + .form__dot {
-      background-image: url("../img/icons/form/input-radio.svg");
+      background-image: url("../img/icons/input-radio.svg");
       background-repeat: no-repeat;
       background-position: center;
 
@@ -513,12 +515,12 @@
 
   &:checked {
     + .form__check {
-      background-image: url("../img/icons/form/tick.svg");
+      background-image: url("../img/icons/tick.svg");
       background-repeat: no-repeat;
       background-position: center;
 
       @media (min-width: $vp-768) {
-        background-image: url("../img/icons/form/tablet-tick.svg");
+        background-image: url("../img/icons/tablet-tick.svg");
       }
     }
   }
@@ -616,6 +618,8 @@
 
   &::placeholder {
     color: rgba($color-default-black, 0.3);
+
+    opacity: 1;
   }
 
   &:focus {
@@ -696,6 +700,8 @@
 
   &::placeholder {
     color: rgba($color-default-black, 0.3);
+
+    opacity: 1;
   }
 
   &:focus {
@@ -712,7 +718,6 @@
   @media (min-width: $vp-768) {
     display: flex;
     justify-content: space-between;
-    align-items: center;
     padding: 2px 39px 8px 72px;
   }
 
@@ -732,6 +737,7 @@
   @media (min-width: $vp-768) {
     width: 330px;
     margin: 0;
+    padding-top: 11px;
 
     font-size: 17px;
     line-height: 30px;
