--- a/source/sass/blocks/manufacturing.scss
+++ b/source/sass/blocks/manufacturing.scss
@@ -73,7 +73,7 @@
     width: 32px;
     height: 22px;
 
-    background-image: url("../img/icons/catalog/video.svg");
+    background-image: url("../img/icons/video.svg");
     transform: translateY(-50%);
   }
 
@@ -155,11 +155,22 @@
   }
 }
 
-
 .manufacturing__player-container {
   position: relative;
 
   grid-area: player-container;
+}
+
+.manufacturing__video-preview {
+  display: block;
+  width: 100%;
+  height: auto;
+
+  @media (min-width: $vp-768) {
+    height: 100%;
+
+    object-fit: cover;
+  }
 }
 
 .manufacturing__player-button {
@@ -185,7 +196,7 @@
     width: 100%;
     height: 100%;
 
-    background-image: url("../img/icons/catalog/play.svg");
+    background-image: url("../img/icons/play.svg");
     transform: translateX(-50%) translateY(-50%);
   }
 
