--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -9,13 +9,15 @@
 @import "./blocks/contacts.scss";
 @import "./blocks/features.scss";
 @import "./blocks/header.scss";
-@import "./blocks/page-footer.scss";
+@import "./blocks/footer.scss";
 @import "./blocks/rewiews.scss";
 @import "./blocks/stock.scss";
 @import "./blocks/user-list.scss";
-@import "./blocks/modal.scss";
+@import "./blocks/modal-container.scss";
+@import "./blocks/modal-window.scss";
 @import "./blocks/intro.scss";
 @import "./blocks/form.scss";
 @import "./blocks/catalog.scss";
+@import "./blocks/catalog-item.scss";
 @import "./blocks/manufacturing.scss";
 @import "./blocks/zig-zag.scss";
